services/servarr/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: services
spec:
  selector:
    app: readarr
  ports:
    - protocol: TCP
      port: 8787
      targetPort: 8787
