services/servarr/readarr/ingress-test.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr-ingress
  namespace: services
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: https://readarr.test.local.hohepa.dev
    gethomepage.dev/group: Servarr
    gethomepage.dev/name: Readarr
    gethomepage.dev/icon: readarr.png
    gethomepage.dev/app: readarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`readarr.test.local.hohepa.dev`)
      kind: Rule
      services:
        - name: readarr
          port: 8787
  tls:
    secretName: test-local-hohepa-dev-tls
