services/servarr/readarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr-ingress
  namespace: services
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`readarr.local.hohepa.dev`)
      kind: Rule
      services:
        - name: readarr
          port: 8787
  tls:
    secretName: local-hohepa-dev-tls
